# LuminaDeploy

./: README.md
backend/: .env.example  Dockerfile  config.py  database.py  pyproject.toml
backend/notebooks/: config.ipynb  database.ipynb
website/: AGENTS.md  CLAUDE.md  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/dashboard/: layout.tsx
website/app/dashboard/account/: page.tsx
website/app/dashboard/api-keys/: page.tsx
website/app/dashboard/deployments/: page.tsx
website/app/dashboard/wallet/: page.tsx
website/components/ui/: badge.tsx  button.tsx
