[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-cloud-run>=0.16.0",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
]
